Status: Working a little better, still much to do
git-svn-id: svn://localhost/Media%20Server@246 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -53,16 +53,16 @@
 		<div class="loading-indicator">Media Server<br /><span id="loading-msg" class="loading-msg">Loading styles and images...</span></div>
 	</div>
     <!-- include everything after the loading indicator -->
-    <link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}extjs/resources/css/ext-all.css" />
-    <link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Filetypes.css" />
-    <link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Desktop.css" />
-    <link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Portal.css" />
-    <link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Downloads.css" />
-    <link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Player.css" />
-    <link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/Global.css" />
-	<link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/examples.css" />
-	<link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}css/lib.css" />
-	<link rel="stylesheet" type="text/css" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}livegrid/src/resources/css/ext-ux-livegrid.css" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=extjs/resources/css/ext-all.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Filetypes.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Desktop.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Portal.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Downloads.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Player.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Global.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/examples.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/examples.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=livegrid/src/resources/css/ext-ux-livegrid.css'|generate_href}" />
 
     <!-- GC -->
  	<!-- LIBS -->
