--- a/templates/live/pages.html
+++ b/templates/live/pages.html
@@ -3,9 +3,9 @@
 {assign var=page_count value=$smarty.request.limit}
 {assign var=page_str value=''}
 {foreach from=$smarty.get key=k item=v}
-{assign var=v value=$v|htmlspecialchars}
+{assign var=v value=$v}
 {if $k != "start"}
-{if $page_str != ''}{assign var=page_str value=$page_str|cat:'&amp;'}{/if}
+{if $page_str != ''}{assign var=page_str value=$page_str|cat:'&'}{/if}
 {assign var=page_str value=$page_str|cat:$k|cat:'='|cat:$v}
 {/if}
 {/foreach}
@@ -15,7 +15,7 @@
 			<table cellpadding="0" cellspacing="0">
 				<tr>
 					<td>
-{assign var=page_str value=$smarty.const.HTML_ROOT|cat:'?'|cat:$page_str}
+{assign var=page_str value=$page_str|generate_href}
 {assign var=page_int value=$page/$page_count}
 {assign var=lower value=$page_int-8}
 {assign var=upper value=$page_int+8}
