--- a/templates/live/query.html
+++ b/templates/live/query.html
@@ -78,30 +78,29 @@ $this->assign('newlineregexp', '/([^ ]{25})/i');
 {else}
 {section name=file loop=$files}
 					<div class="file {$files[file].Filetype}" onmousedown="deselectAll(event);fileSelect(this, true, event);return false;" oncontextmenu="showMenu(this);return false;" id="{$files[file].id}"><div class="notselected"></div>
-{assign var=encoded value=$files[file].Filepath|urlencode|htmlspecialchars}
 {if $files[file].Filetype=="FOLDER" || 
 ($files[file].Filepath|@handles:'archive' && $smarty.request.cat != $prefix|cat:'archive') || 
 ($files[file].Filepath|@handles:'playlist' && $smarty.request.cat != $prefix|cat:'playlist') || 
 ($files[file].Filepath|@handles:'diskimage' && $smarty.request.cat != $prefix|cat:'diskimage')
 }
 {if $files[file].Filepath|@handles:'archive'}
-{assign var=cat value=$prefix|cat:archive}
+{assign var=cat value='archive'}
 {elseif $files[file].Filepath|@handles:'diskimage'}
-{assign var=cat value=$prefix|cat:diskimage}
+{assign var=cat value='diskimage'}
 {elseif $files[file].Filepath|@handles:'playlist'}
-{assign var=cat value=$prefix|cat:playlist}
+{assign var=cat value='playlist'}
 {else}
 {assign var=cat value=$smarty.request.cat}
 {/if}
-{assign var=link value=$smarty.const.HTML_ROOT|cat:'?dir='|cat:$encoded|cat:'&amp;cat='|cat:$cat}
-{elseif $files[file].Filepath|@handles:'archive'}{assign var=link value=$smarty.const.HTML_ROOT|cat:'plugins/file.php/'|cat:$prefix|cat:'archive/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
-{elseif $files[file].Filepath|@handles:'diskimage'}{assign var=link value=$smarty.const.HTML_ROOT|cat:'plugins/file.php/'|cat:$prefix|cat:'diskimage/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
-{elseif $files[file].Filepath|@handles:'image_browser'}{assign var=link value=$smarty.const.HTML_ROOT|cat:'plugins/file.php/'|cat:$prefix|cat:'image_browser/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
-{else}{assign var=link value=$smarty.const.HTML_ROOT|cat:'plugins/file.php/'|cat:$smarty.request.cat|cat:'/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}{/if}
+{assign var=link value=''|generate_href:'select':$cat:$files[file].Filepath}
+{elseif $files[file].Filepath|@handles:'archive'}{assign var=link value=''|generate_href:'file':'archive':'':$files[file].id:'':$files[file].Filename}
+{elseif $files[file].Filepath|@handles:'diskimage'}{assign var=link value=''|generate_href:'file':'diskimage':'':$files[file].id:'':$files[file].Filename}
+{elseif $files[file].Filepath|@handles:'image_browser'}{assign var=link value=''|generate_href:'file':'image_browser':'':$files[file].id:'':$files[file].Filename}
+{else}{assign var=link value=''|generate_href:'file':$smarty.request.cat:'':$files[file].id:'':$files[file].Filename}{/if}
 						<table class="itemTable" cellpadding="0" cellspacing="0" onclick="location.href = '{$link}';">
 							<tr>
 								<td>
-									<div class="thumb file_ext_{$files[file].Filetype} file_type_{'/'|str_replace:' file_type_':$files[file].Filemime}"><img src="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}images/s.gif" alt="{$files[file].Filetype}" height="48" width="48"></div>
+									<div class="thumb file_ext_{$files[file].Filetype} file_type_{'/'|str_replace:' file_type_':$files[file].Filemime}"><img src="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&tfile=images/s.gif'|generate_href:'template'}" alt="{$files[file].Filetype}" height="48" width="48"></div>
 								</td>
 							</tr>
 						</table>
