status: working a little better, getting closer, needs a lot of testing
git-svn-id: svn://localhost/Media%20Server@249 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/query.html
+++ b/templates/live/query.html
@@ -71,8 +71,8 @@ $this->assign('newlineregexp', '/([^ ]{25})/i');
 {include file=$templates.TEMPLATE_PAGES}
 			<div class="titlePadding"></div>
 			<div class="files" id="files">
-{if isset($error) and $error != ''}
-					<span style="color:#C00"><b>{$error}</b></span>
+{if count($user_errors) > 0}
+					<span style="color:#C00">{foreach from=$user_errors item=error}<b>{$error->message}</b><br />{/foreach}</span>
 {elseif count($files) == 0}
 					<b>There are no files to display</b>
 {else}
