--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -53,16 +53,16 @@
 		<div class="loading-indicator">Media Server<br /><span id="loading-msg" class="loading-msg">Loading styles and images...</span></div>
 	</div>
     <!-- include everything after the loading indicator -->
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=extjs/resources/css/ext-all.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Filetypes.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Desktop.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Portal.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Downloads.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Player.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Global.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/examples.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/examples.css'|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=livegrid/src/resources/css/ext-ux-livegrid.css'|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=extjs/resources/css/ext-all.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Filetypes.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Desktop.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Portal.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Downloads.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Player.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/Global.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/examples.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=css/examples.css'|generate_href:'template'}" />
+    <link rel="stylesheet" type="text/css" href="{'template='|cat:$smarty.const.HTML_TEMPLATE|cat:'&file=livegrid/src/resources/css/ext-ux-livegrid.css'|generate_href:'template'}" />
 
     <!-- GC -->
  	<!-- LIBS -->
