--- a/templates/plain/m3u.html
+++ b/templates/plain/m3u.html
@@ -10,7 +10,7 @@ $ids = substr($ids, 0, strlen($ids)-1);
 $this->assign('ids', $ids);
 if(!isset($_GET['item']) && !isset($_GET['id']))
 {
-	header('Location: ' . HTML_ROOT . 'plugins/list.php/' . $_REQUEST['cat'] . '/' . $ids . '/m3u/list.php');
+	header('Location: ' . generate_href('list=m3u', 'list', $_REQUEST['cat']) . 'plugins/list.php/'));
 }
 {/php}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -22,9 +22,9 @@ if(!isset($_GET['item']) && !isset($_GET['id']))
 <body>
 Note: All non-media types will be filtered out using this list type.<br />
 Select your audio/video format:<br />
-<a href="{$smarty.const.HTML_ROOT}plugins/list.php/{$smarty.request.cat}/{$ids}/m3u/MP4/Files.m3u">mp4</a>
-: <a href="{$smarty.const.HTML_ROOT}plugins/list.php/{$smarty.request.cat}/{$ids}/m3u/MPG/Files.m3u">mpg/mp3</a>
-: <a href="{$smarty.const.HTML_ROOT}plugins/list.php/{$smarty.request.cat}/{$ids}/m3u/WM/Files.m3u">wmv/wma</a>
+<a href="{'list=m3u'|generate_href:'list':$smarty.request.cat:'':$ids:'mp3':'Files.m3u'}">mp4</a>
+: <a href="{'list=m3u'|generate_href:'list':$smarty.request.cat:'':$ids:'mpg':'Files.m3u'}">mpg/mp3</a>
+: <a href="{'list=m3u'|generate_href:'list':$smarty.request.cat:'':$ids:'wm':'Files.m3u'}">wmv/wma</a>
 <br />
 Some files that will be listed: <br />
 {php}
@@ -59,10 +59,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}plugins/encode.php/{$smarty.request.cat}/{$files[file].id}/MP4/{$files[file].Filename}.mp4
+{$smarty.const.HTML_DOMAIN}{''|generate_href:'encode':$smarty.request.cat:'':$files[file].id:'mp4':'$files[file].Filename'}.mp4
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}plugins/encode.php/{$smarty.request.cat}/{$files[file].id}/MP4A/{$files[file].Filename}.mp4
+{$smarty.const.HTML_DOMAIN}{''|generate_href:'encode':$smarty.request.cat:'':$files[file].id:'mp4a':'$files[file].Filename'}.mp4
 {/if}
 {/section}
 {elseif $smarty.request.extra == 'WM'}
@@ -80,10 +80,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}plugins/encode.php/{$smarty.request.cat}/{$files[file].id}/WMV/{$files[file].Filename}.wmv
+{$smarty.const.HTML_DOMAIN}{''|generate_href:'encode':$smarty.request.cat:'':$files[file].id:'wmv':'$files[file].Filename'}.wmv
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}plugins/encode.php/{$smarty.request.cat}/{$files[file].id}/WMA/{$files[file].Filename}.wma
+{$smarty.const.HTML_DOMAIN}{''|generate_href:'encode':$smarty.request.cat:'':$files[file].id:'wma':'$files[file].Filename'}.wma
 {/if}
 {/section}
 {elseif $smarty.request.extra == 'MPG'}
@@ -101,10 +101,10 @@ header('Content-Disposition: attachment; filename="' . (isset($_REQUEST['filenam
 {assign var=type value=$type_arr.0}
 {if $type=="video"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}plugins/encode.php/{$smarty.request.cat}/{$files[file].id}/MPG/{$files[file].Filename}.mpg
+{$smarty.const.HTML_DOMAIN}{''|generate_href:'encode':$smarty.request.cat:'':$files[file].id:'mpg':'$files[file].Filename'}.mpg
 {elseif $type=="audio"}
 #EXTINF:{$length},{$title}
-{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}plugins/encode.php/{$smarty.request.cat}/{$files[file].id}/MP3/{$files[file].Filename}.mp3
+{$smarty.const.HTML_DOMAIN}{''|generate_href:'encode':$smarty.request.cat:'':$files[file].id:'mp3':'$files[file].Filename'}.mp3
 {/if}
 {/section}
 {/if}
