--- a/templates/live/pages.html
+++ b/templates/live/pages.html
@@ -1,54 +1,49 @@
 {assign var=page value=$start|intval}
 {assign var=item_count value=$files|@count}
 {assign var=page_count value=$limit}
-{assign var=page_str value=''}
-{foreach from=$smarty.get key=k item=v}
-{assign var=v value=$v}
-{if $k != "start"}
-{if $page_str != ''}{assign var=page_str value=$page_str|cat:'&'}{/if}
-{assign var=page_str value=$page_str|cat:$k|cat:'='|cat:$v}
-{/if}
-{/foreach}
 <table cellpadding="0" cellspacing="0" class="pageTable">
 	<tr>
 		<td align="center">
 			<table cellpadding="0" cellspacing="0">
 				<tr>
 					<td>
-{assign var=page_str value=$page_str|generate_href}
 {assign var=page_int value=$page/$page_count}
 {assign var=lower value=$page_int-8}
 {assign var=upper value=$page_int+8}
 {assign var=total_count value=$total_count-1}
 {assign var=pages value=$total_count/$page_count|floor}
+{assign var=prev_page value=$page-$page_count}
 {if $pages > 0}
 	{if $lower < 0}{assign var=upper value=$upper-$lower}{assign var=lower value=0}{/if}
 	{if $upper > $pages}{assign var=upper value=$pages}{assign var=lower value=$lower-8}{/if}
 	{if $lower < 0}{assign var=lower value=0}{/if}
 	{if $page > 0}
 		{if $page > $page_count}
-			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$page_str}&start=0" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">First</a></div>
-			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$page_str}&start={$page-$page_count}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Prev</a></div>
+			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$get|cat:'&start=0'|generate_href}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">First</a></div>
+			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$get|cat:'&start='|cat:prev_page|generate_href}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Prev</a></div>
 		{else}
-			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$page_str}&start=0" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">First</a></div>
+			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$get|cat:'&start=0'|generate_href}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">First</a></div>
 		{/if}
 		<div class="page">|</div>
 	{/if}
 	{section name=page_select start=$lower loop=$upper+1 step=1}
+    	{assign var=curr_page value=$smarty.section.page_select.index*$page_count}
 		{if $smarty.section.page_select.index == $page_int}
 		<div class="page{if strlen($page_int+1) > 2}W{/if}"><b>{$page_int+1}</b></div>
 		{else}
-		<div class="page{if strlen($smarty.section.page_select.index+1) > 2}W{/if}"><div class="pageHighlight{if strlen($smarty.section.page_select.index+1) > 2}W{/if}" style="visibility:hidden"></div><a class="pageLink" href="{$page_str}&start={$smarty.section.page_select.index*$page_count}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">{$smarty.section.page_select.index+1}</a></div>
+		<div class="page{if strlen($smarty.section.page_select.index+1) > 2}W{/if}"><div class="pageHighlight{if strlen($smarty.section.page_select.index+1) > 2}W{/if}" style="visibility:hidden"></div><a class="pageLink" href="{$get|cat:'&start='|cat:$curr_page|generate_href}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">{$smarty.section.page_select.index+1}</a></div>
 		{/if}
 	{/section}
 	{if $page <= $total_count-$page_count}
 		<div class="page">|</div>
 		{assign var=last_page value=$total_count/$page_count|floor}
+		{assign var=last_page value=$last_page*$page_count}
+        {assign var=next_page value=$page+$page_count}
 		{if $page < $total_count-$page_count-$page_count}
-			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$page_str}&start={$page+$page_count}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Next</a></div>
-			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$page_str}&start={$last_page*$page_count}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Last</a></div>
+			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$get|cat:'&start='|cat:$next_page|generate_href}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Next</a></div>
+			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$get|cat:'&start='|cat:$last_page|generate_href}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Last</a></div>
 		{else}
-			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$page_str}&start={$last_page*$page_count}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Last</a></div>
+			<div class="pageW"><div class="pageHighlightW" style="visibility:hidden"></div><a class="pageLink" href="{$get|cat:'&start='|cat:$last_page|generate_href}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';">Last</a></div>
 		{/if}
 	{/if}
 {/if}
