--- a/templates/mobile/pages.html
+++ b/templates/mobile/pages.html
@@ -1,20 +1,13 @@
 {assign var=page value=$start|intval}
 {assign var=item_count value=$files|@count}
 {assign var=page_count value=$limit}
-{assign var=page_str value=''}
-{foreach from=$smarty.get key=k item=v}
-{if $page_str != ''}{assign var=page_str value=$page_str|cat:'&amp;'}{/if}
-{if $k != "start"}
-{assign var=page_str value=$page_str|cat:$k|cat:'='|cat:$v}
-{/if}
-{/foreach}
-{assign var=page_str value=$smarty.server.PHP_SELF|cat:'?'|cat:$page_str}
+{assign var=prev_page value=$page-$page_count}
 {if $page > 0}
     {if $page > $page_count}
-        <a href="{$page_str}&start=0" class="big" style="float:left; clear:none; display:inline;">First</a>
-        <a href="{$page_str}&start={$page-$page_count}" class="big" style="float:left; clear:none; display:inline;">Prev</a>
+        <a href="{$get|cat:'&start=0'|generate_href}" class="big" style="float:left; clear:none; display:inline;">First</a>
+        <a href="{$get|cat:'&start='|cat:prev_page|generate_href}" class="big" style="float:left; clear:none; display:inline;">Prev</a>
     {else}
-        <a href="{$page_str}&start=0" class="big" style="float:left; clear:none; display:inline;">First</a>
+        <a href="{$get|cat:'&start=0'|generate_href}" class="big" style="float:left; clear:none; display:inline;">First</a>
     {/if}
 {/if}
 {assign var=page_int value=$page/$page_count}
@@ -27,10 +20,12 @@
 {if $lower < 0}{assign var=lower value=0}{/if}
 {if $page <= $total_count-$page_count}
 	{assign var=last_page value=$total_count/$page_count|floor}
+    {assign var=last_page value=$last_page*$page_count}
+    {assign var=next_page value=$page+$page_count}
 	{if $page < $total_count-$page_count-$page_count}
-		<a href="{$page_str}&start={$page+$page_count}" class="big" style="float:left; clear:none; display:inline;">Next</a>
-		<a href="{$page_str}&start={$last_page*$page_count}" class="big" style="float:left; clear:none; display:inline;">Last</a>
+		<a href="{$get|cat:'&start='|cat:$next_page|generate_href}" class="big" style="float:left; clear:none; display:inline;">Next</a>
+		<a href="{$get|cat:'&start='|cat:$last_page|generate_href}" class="big" style="float:left; clear:none; display:inline;">Last</a>
 	{else}
-		<a href="{$page_str}&start={$last_page*$page_count}" class="big" style="float:left; clear:none; display:inline;">Last</a>
+		<a href="{$get|cat:'&start='|cat:$last_page|generate_href}" class="big" style="float:left; clear:none; display:inline;">Last</a>
 	{/if}
 {/if}
